k8s/apps/default/jellyseerr/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  labels:
    app.kubernetes.io/instance: jellyseerr
    app.kubernetes.io/name: jellyseerr
    app.kubernetes.io/service: jellyseerr
spec:
  type: ClusterIP
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app.kubernetes.io/component: jellyseerr
    app.kubernetes.io/instance: jellyseerr
    app.kubernetes.io/name: jellyseerr
