k8s/apps/default/jellyseerr/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyseerr
  labels:
    app.kubernetes.io/instance: jellyseerr
    app.kubernetes.io/name: jellyseerr
spec:
  hostnames:
    - requests.cbannister.xyz
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: jellyseerr
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
